db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/springreactive_my-network: "true"
        io.kompose.service: db
    spec:
      containers:
        - args:
            - postgres
            - -c
            - log_statement=all
          image: postgres:10.5
          name: db
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
