server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server-ingress
spec:
  rules:
    - host: tienle.com
      http:
        paths:
        - backend:
            serviceName: server
            servicePort: 8080
